tests/error/type_match/switch_expr_empty.bz
function test(val: int32)
{
	let _ = switch (val) {};
}
